--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,28 @@
 language: node_js
 sudo: true
 node_js:
-- 8
+  - 8
 branchs:
   only:
-  - master
+    - master
 addons:
   ssh_known_hosts:
-  - 47.240.63.98
+    - 47.240.63.98
 cache:
   directories:
-  - node_modules
+    - node_modules
 before_install:
-- openssl aes-256-cbc -K $encrypted_9b2d7e19d83c_key -iv $encrypted_9b2d7e19d83c_iv
-  -in id_rsa.enc -out ~\/.ssh/id_rsa -d
-- openssl aes-256-cbc -K $encrypted_9b2d7e19d83c_key -iv $encrypted_9b2d7e19d83c_iv
-  -in .travis/id_rsa.enc -out ~/.ssh/id_rsa -d
-- eval "$(ssh-agent -s)"
-- chmod 600 ~/.ssh/id_rsa
-- ssh-add ~/.ssh/id_rsa
+  - openssl aes-256-cbc -K $encrypted_9b2d7e19d83c_key -iv $encrypted_9b2d7e19d83c_iv
+    -in id_rsa.enc -out ~\/.ssh/id_rsa -d
+  - openssl aes-256-cbc -K $encrypted_9b2d7e19d83c_key -iv $encrypted_9b2d7e19d83c_iv
+    -in .travis/id_rsa.enc -out ~/.ssh/id_rsa -d
+  - eval "$(ssh-agent -s)"
+  - chmod 600 ~/.ssh/id_rsa
+  - ssh-add ~/.ssh/id_rsa
 install:
-- yarn install
+  - yarn install
 scripts:
-- yarn build
+  - yarn test
+  - yarn build
+after_success:
+  - ssh root@47.240.63.98 -o StrictHostKeyChecking=no 'cd ~/tle-front-end && git pull && curl https://raw.githubusercontent.com/creationix/nvm/master/install.sh | bash && source ~/.bashrc && nvm install 10 && nvm use 10 && npm install && npm run build'
