--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "antd": "^4.0.2",
     "babel-plugin-import": "^1.13.0",
     "bizcharts": "^3.5.8",
+    "classnames": "^2.2.6",
     "customize-cra": "^0.9.1",
+    "i18next-browser-languagedetector": "^4.0.2",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
+    "randomcolor": "^0.5.4",
     "react": "^16.13.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.0",
@@ -21,6 +25,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -57,8 +62,10 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/redux": "^3.6.0",
     "husky": "^4.2.3",
+    "i18next": "^19.3.3",
     "prettier": "1.19.1",
     "pretty-quick": "^2.0.1",
+    "react-i18next": "^11.3.3",
     "redux-devtools": "^3.5.0"
   }
 }
