--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     }
   },
   "dependencies": {
-    "antd": "^4.0.2",
+    "antd": "^4.1.0",
     "babel-plugin-import": "^1.13.0",
     "bizcharts": "^3.5.8",
     "classnames": "^2.2.6",
     "customize-cra": "^0.9.1",
+    "enquire-js": "^0.2.1",
     "i18next-browser-languagedetector": "^4.0.2",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "randomcolor": "^0.5.4",
+    "rc-banner-anim": "^2.4.3",
+    "rc-queue-anim": "^1.8.4",
+    "rc-scroll-anim": "^2.7.4",
+    "rc-tween-one": "^2.6.8",
     "react": "^16.13.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.0",
