--- a/package.json
+++ b/package.json
@@ -14,24 +14,21 @@
     "bizcharts": "^3.5.8",
     "classnames": "^2.2.6",
     "customize-cra": "^0.9.1",
-    "enquire-js": "^0.2.1",
     "i18next-browser-languagedetector": "^4.0.2",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "randomcolor": "^0.5.4",
-    "rc-banner-anim": "^2.4.3",
-    "rc-queue-anim": "^1.8.4",
-    "rc-scroll-anim": "^2.7.4",
-    "rc-tween-one": "^2.6.8",
     "react": "^16.13.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.0",
+    "react-jss": "^10.1.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "i18next": "^19.3.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -60,6 +57,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/antd": "^1.0.0",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
@@ -68,7 +66,6 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/redux": "^3.6.0",
     "husky": "^4.2.3",
-    "i18next": "^19.3.3",
     "prettier": "1.19.1",
     "pretty-quick": "^2.0.1",
     "react-i18next": "^11.3.3",
