--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bizcharts": "^3.5.8",
     "classnames": "^2.2.6",
     "customize-cra": "^0.9.1",
+    "gg-editor": "^3.1.0",
+    "i18next": "^19.3.3",
     "i18next-browser-languagedetector": "^4.0.2",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
@@ -22,13 +24,14 @@
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.0",
     "react-jss": "^10.1.1",
+    "react-markdown": "^4.3.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-syntax-highlighter": "^12.2.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "typescript": "~3.7.2",
-    "i18next": "^19.3.3"
+    "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -64,6 +67,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-syntax-highlighter": "^11.0.4",
     "@types/redux": "^3.6.0",
     "husky": "^4.2.3",
     "prettier": "1.19.1",
