--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "i18next-browser-languagedetector": "^4.0.2",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
+    "numeral": "^2.0.6",
     "randomcolor": "^0.5.4",
     "react": "^16.13.0",
     "react-app-rewired": "^2.1.5",
@@ -63,6 +64,7 @@
     "@types/antd": "^1.0.0",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
+    "@types/numeral": "^0.0.26",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
