--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/antd": "^1.0.0",
     "@types/jest": "^24.0.0",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^12.0.0",
     "@types/numeral": "^0.0.26",
     "@types/react": "^16.9.0",
