--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-syntax-highlighter": "^12.2.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "uuid": "^7.0.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -72,6 +73,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/react-syntax-highlighter": "^11.0.4",
     "@types/redux": "^3.6.0",
+    "@types/uuid": "^7.0.2",
     "husky": "^4.2.3",
     "prettier": "1.19.1",
     "pretty-quick": "^2.0.1",
