--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "randomcolor": "^0.5.4",
     "react": "^16.13.0",
     "react-app-rewired": "^2.1.5",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.0",
     "react-jss": "^10.1.1",
     "react-markdown": "^4.3.1",
@@ -31,8 +32,10 @@
     "react-scripts": "3.4.0",
     "react-syntax-highlighter": "^12.2.1",
     "redux": "^4.0.5",
+    "redux-cookies-middleware": "^0.2.0",
     "redux-thunk": "^2.3.0",
     "typescript": "~3.7.2",
+    "universal-cookie": "^4.0.3",
     "uuid": "^7.0.3"
   },
   "scripts": {
