--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     }
   },
   "dependencies": {
+    "@antv/data-set": "^0.11.4",
     "antd": "^4.1.0",
     "babel-plugin-import": "^1.13.0",
     "bizcharts": "^3.5.8",
