--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^16.13.0",
     "react-jss": "^10.1.1",
     "react-markdown": "^4.3.1",
+    "react-quill": "^1.3.5",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
