--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "numeral": "^2.0.6",
+    "password-validator": "^5.0.3",
     "randomcolor": "^0.5.4",
     "react": "^16.13.0",
     "react-app-rewired": "^2.1.5",
