--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "redux": "^4.0.5",
     "redux-cookies-middleware": "^0.2.0",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "typescript": "~3.7.2",
     "universal-cookie": "^4.0.3",
     "uuid": "^7.0.3"
@@ -79,6 +80,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/react-syntax-highlighter": "^11.0.4",
     "@types/redux": "^3.6.0",
+    "@types/socket.io-client": "^1.4.32",
     "@types/uuid": "^7.0.2",
     "husky": "^4.2.3",
     "prettier": "1.19.1",
