--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@antv/data-set": "^0.11.4",
+    "@types/react-sparklines": "^1.7.0",
     "antd": "^4.1.0",
     "babel-plugin-import": "^1.13.0",
     "bizcharts": "^3.5.8",
@@ -33,6 +34,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-sparklines": "^1.7.0",
     "react-syntax-highlighter": "^12.2.1",
     "redux": "^4.0.5",
     "redux-cookies-middleware": "^0.2.0",
